Disabling cross-complilation until coverage is fixed

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -46,58 +46,58 @@ jobs:
               !tests/data/**/*.rs
       - name: check formatting
         run: cargo fmt -- --check
-  windows:
-    runs-on: windows-latest
-    strategy:
-      matrix:
-        version:
-          - stable
-          - nightly
-        target:
-          - x86_64-pc-windows-gnu
-          - x86_64-pc-windows-msvc
-      fail-fast: false
-    steps:
-      - uses: actions/checkout@v2
-      - uses: dtolnay/rust-toolchain@master
-        with:
-          toolchain: ${{ matrix.version }}
-      - name: cache
-        uses: Swatinem/rust-cache@v2
-      - name: test
-        run: cargo test
-      - uses: actions/upload-artifact@v3
-        if: failure()
-        with:
-          name: windows ${{ matrix.version }}
-          retention-days: 3
-          path: |
-              tests/data/
-              !tests/data/**/*.rs
-  mac:
-    runs-on: macos-latest
-    strategy:
-      matrix:
-        version:
-          - stable
-          - nightly
-        target:
-          - x86_64-apple-darwin	
-      fail-fast: false
-    steps:
-      - uses: actions/checkout@v2
-      - uses: dtolnay/rust-toolchain@master
-        with:
-          toolchain: ${{ matrix.version }}
-      - name: cache
-        uses: Swatinem/rust-cache@v2
-      - name: test
-        run: cargo test
-      - uses: actions/upload-artifact@v3
-        #if: failure()
-        with:
-          name: mac ${{ matrix.version }}
-          retention-days: 3
-          path: |
-              tests/data/
-              !tests/data/**/*.rs
+  # windows:
+  #   runs-on: windows-latest
+  #   strategy:
+  #     matrix:
+  #       version:
+  #         - stable
+  #         - nightly
+  #       target:
+  #         - x86_64-pc-windows-gnu
+  #         - x86_64-pc-windows-msvc
+  #     fail-fast: false
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: dtolnay/rust-toolchain@master
+  #       with:
+  #         toolchain: ${{ matrix.version }}
+  #     - name: cache
+  #       uses: Swatinem/rust-cache@v2
+  #     - name: test
+  #       run: cargo test
+  #     - uses: actions/upload-artifact@v3
+  #       if: failure()
+  #       with:
+  #         name: windows ${{ matrix.version }}
+  #         retention-days: 3
+  #         path: |
+  #             tests/data/
+  #             !tests/data/**/*.rs
+  # mac:
+  #   runs-on: macos-latest
+  #   strategy:
+  #     matrix:
+  #       version:
+  #         - stable
+  #         - nightly
+  #       target:
+  #         - x86_64-apple-darwin	
+  #     fail-fast: false
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: dtolnay/rust-toolchain@master
+  #       with:
+  #         toolchain: ${{ matrix.version }}
+  #     - name: cache
+  #       uses: Swatinem/rust-cache@v2
+  #     - name: test
+  #       run: cargo test
+  #     - uses: actions/upload-artifact@v3
+  #       #if: failure()
+  #       with:
+  #         name: mac ${{ matrix.version }}
+  #         retention-days: 3
+  #         path: |
+  #             tests/data/
+  #             !tests/data/**/*.rs
