--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,8 +3,18 @@ name: Release
 on:
   push:
     tags:
-      - '[0-9]+.*'
+      - 'v[0-9]+.*'
 jobs:
+  build-changelog:
+    name: "Build Changelog"
+    if: startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
+    steps:
+      - name: Build Changelog
+        id: github_release
+        uses: mikepenz/release-changelog-builder-action@v3
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   create-release:
     name: "Create GitHub release"
     # only publish from the origin repository
