Ignoring dev dependency audit issue on tarpaulin

--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -23,4 +23,5 @@ jobs:
       - uses: actions-rs/audit-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          args: --ignore RUSTSEC-2020-0071
 
