--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,14 +27,14 @@ jobs:
           changelog: CHANGELOG.md
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  crates:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: publish package to crates
-        run: |
-          cargo package
-          cargo publish --token ${{ secrets.CARGO_TOKEN }}
+  # crates:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: publish package to crates
+  #       run: |
+  #         cargo package
+  #         cargo publish --token ${{ secrets.CARGO_TOKEN }}
 
   binaries:
     name: "Upload release binaries"
